--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "test": "grunt test"
   },
   "devDependencies": {
-    "grunt": "~0.3.16"
+    "grunt": "~0.3.16",
+    "wrench": "~1.4.4"
   },
   "keywords": [
     "gruntplugin"
